# kicad_firmware_generation

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
code_gen/: code_gen.py
common_types/: group_types.py  parse_xml.py  snippet_types.py  snippet_xml.py  stringify_xml.py
example/: group_netlist.xml  kicad_netlist.xml  pindefs.h  template.jinja2
example/schematics/: LED.kicad_sch  example.kicad_pro  example.kicad_sch
group_many_to_many_mapper/: group_many_to_many_mapper.py
group_netlist_merger/: group_netlist_merger.py
kicad_group_netlister/: kicad_group_netlister.py  kicad_netlist_xml.py  kicad_types.py
kicad_snippet_mapper/: intermediate_types.py  kicad_snippet_mapper.py  kicad_types.py  main.py  netlist_xml.py
map_to_csv/: map_to_csv.py
netlist_to_csv/: netlist_to_csv.py
snippet_code_gen/: snippet_code_gen.py
snippet_many_to_many_mapper/: snippet_many_to_many_mapper.py
snippet_map/: snippet_map_xml.py  snippet_types.py
snippet_one_to_many_mapper/: snippet_one_to_many_mapper.py
